Changes for 1.8.0.0
* Changed automated hosting bots so that they show up as having 1 less player (ie: the bot itself doesn't count), which means zero players if noone else has joined. (veqryn)

* Changed unit resource creation so that positive resources will be created before negative resources. (veqryn)

* Fixing bug in destroyedTUV condition for allRounds that prevented it from working at all. (veqryn)

* Added an updated engine jar for 1.7.0.5 so that the new engine can play old 1.7.0.x savegames. (veqryn)

* Changed game setup screen so that the buttons for "Choose Game", "Load Saved Game", and "Game Options", will no longer be greyed out for Clients who have connected to an automated hosting bot. Those buttons will perform the same as if the client used the "Network" menu instead. (veqryn)

* Adding a menu option to change an automated hosting bot's game options, and creating backend to process this request. (veqryn)

* Forcing automated hosting bots have have a "support email address", so that when a bot has hung or stopped responding, a moderator in the lobby can email the bot's owner to notify them of the situation. (veqryn)

* Forcing automated hosting bots to have no password, to start with the string "Bot", and have "automated_host" somewhere in comments. (veqryn)

* Adding a column to the lobby called "B" for "Bots", which will show which hosts are automated hosting bots. They will also show up as italics. (veqryn)

* Fixed order of firing in ww2v3 and Global 1940, so that defending subs that are not sneak attacking will fire after all attackers have fired. (veqryn)

* Fixing a bug where attacking with a carrier loaded with allied fighters, then retreating, would prevent those fighters from being able to participate in battles for the rest of the game. (veqryn)

* Allowed TripleA clip player to access sound files within a zipped map. (veqryn)
